# comtools

./: .gitignore  README.md  test.ipynb
cai_demo/: demo.py  main.py
cc_tools/: README.md
cc_tools/finetuningTorchVisionModel_Regression_face_pts/img_regression_api/: CMakeLists.txt  main_img_regression.cpp
cc_tools/finetuningTorchVisionModel_Regression_face_pts/img_regression_api/include/: img_regression.h
cc_tools/finetuningTorchVisionModel_Regression_face_pts/img_regression_api/src/: img_regression.cpp
comfunc/: funcxml.py  pyechart.py  tools.py
forgeting_test/: get_label.py
func/: path.py  print_color.py
get_img_from_google/: google.py
human_label_to_model_label/: LOGO_1-3_level_label_20210902.xlsx  l2l.py  l2l_dict.json
my_clip/: .gitignore  SERVICE_TEST_clip.py  TEST_WITH_LABEL_clip.py  download_from_clip.py  export.py  my_clip.py  my_server.py  onnx_profile.py
profile_diff/: config.json  profile_diff.py  pt_onnx_trt.json  pt_wts_trt.json  tmp.py
show_pic_form_data/: SHOW_INFO.py  bar.py  bar_logo_ans.py  bar_with_brush.html  check_img_fiftyone.py  fiftyone_base.py  imgs_size_analyze_scatter.py  line.py  open_dataset.py  pie.py  scatter.py  show_dataset.py  show_info_bar.py  show_info_bar_test.py  show_tmp.html  yolov5_dataset.py
td_content_security_tools/: README.md
test_offline/: main.py
yolotools/: 1_out.xlsx  CHECK_IMG.py  CHECK_IMG_for_logo.py  CHECK_IMG_test.py  Commodity_Statics.py  Commodity_Statics_Logo.py  Commodity_Statics_Logo_LOGO和内容安全按标签品类整体统计.py  Commodity_Statics_Logo_for_text.py  Commodity_Statics_Logo_fordeal_one_week.py  Commodity_Statics_Logo_人审文本标签频次排序.py  DATA_INTEGRATION.py  DATA_TRANSFORM_LINE_BAG.py  DATA_TRANSFORM_LINE_CARTOON.py  DATA_TRANSFORM_LINE_LOGO.py  DATA_TRANSFORM_LINE_PATTERN.py  DATA_TRANSFORM_LINE_SHOES.py  DATA_TRANSFORM_LINE_SHOES_BAG.py  DATA_TRANSFORM_LINE_pattern.py  DOWNLOAD_IMG_FROM_TXT.py  DOWNLOAD_IMG_FROM_TXT_by_list.py  DOWNLOAD_IMG_FROM_TXT_category.py  DOWNLOAD_IMG_FROM_TXT_get_all_diff.py  DOWNLOAD_IMG_FROM_TXT_tmp.py  DOWNLOAD_IMG_FROM_TXT_仅考虑机人审拒绝与否.py  (+69 more)
(+1297 files in other folders)
